--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -7,6 +7,15 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{Lusa,
+	abstract = {Neste artigo s{\~{a}}o abordados os conceitos-chave do modelo arquitetural REST, suas origens e caracter{\'{i}}sticas. Ser{\'{a}} visto tamb{\'{e}}m as principais vantagens e desvantagens da sua aplica{\c{c}}{\~{a}}o e sua estreita rela{\c{c}}{\~{a}}o com o funcionamento da pr{\'{o}}pria WEB.},
+	author = {Lusa, Diego Antonio and Kraemer, Robson Paulo},
+	journal = {Engenharia de Software Magazine},
+	title = {{Conhecendo o modelo arquitetural REST}},
+	url = {http://www.devmedia.com.br/conhecendo-o-modelo-arquitetural-rest/28052},
+	year = {2016}
+}
+
 @article{ribeiro2012,
 	title={Um estudo sobre o incremento da Coes{\~a}o e Coer{\^e}ncia (Expressividade) em Mapas Conceituais},
 	author={Ribeiro, EF and Menezes, CS and Tavares, OL and Cury, D},
