--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -652,9 +652,11 @@ O que propomos neste projeto é, portanto, a criação de um novo \textit{plugin
 
 \chapter{Integração de Sistemas}
 
-Nos últimos anos muitas organizações têm utilizado aplicações para dar suporte aos seus negócios e por esse motivo sistemas de informação têm se tornado um de seus pilares de funcionamento \cite{earl1989management}. O aumento do uso da tecnologia de informação juntamente com a busca pelo controle e flexibilização de informações fez crescer a demanda por soluções que viabilizassem a partilha de informações e de funcionalidades de aplicações \cite{edwards2000application}. Aplicações estas, que em grande parte dos casos, foram desenvolvidas de forma customizada e sem a capacidade de integração com outros sistemas. Neste contexto, as organizações seguiram diversas abordagens para a integração dos seus sistemas de informação, criando então soluções sem nenhuma norma técnica, devido a inexistência das mesmas. 
+Nos últimos anos muitas organizações têm utilizado aplicações para dar suporte aos seus negócios e por esse motivo sistemas de informação têm se tornado um de seus pilares de funcionamento \cite{martins2006integraccao}. O aumento do uso da tecnologia de informação juntamente com a busca pelo controle e flexibilização de informações fez crescer a demanda por soluções que viabilizassem a partilha de informações e de funcionalidades de aplicações \cite{edwards2000application}. Aplicações estas, que em grande parte dos casos, foram desenvolvidas de forma customizada e sem a capacidade de integração com outros sistemas. Neste contexto, as organizações seguiram diversas abordagens para a integração dos seus sistemas de informação, criando então soluções sem nenhuma norma técnica, devido a inexistência das mesmas. 
 
-O crescimento da necessidade de soluções de integração de sistemas levou ao desenvolvimento de normas técnicas e protocolos direcionados a interoperabilidade de sistemas, surgindo então um cenário desafiador onde as instituições precisam escolher entre diversas normas e técnicas de integração de sistemas, muitas delas incompatíveis entre si \cite{martins2006integraccao}. Dentre estas tecnologias se destacam Simple Object Access Protocol (SOAP) e Representational State Transfer (REST), que obtiveram ampla aceitação no mercado pois conseguem se aproveitar do protocolo Hypertext Transfer Protocol (HTTP).
+O crescimento da necessidade de soluções de integração de sistemas levou ao desenvolvimento de normas técnicas e protocolos direcionados a interoperabilidade de sistemas, surgindo então um cenário desafiador onde as instituições precisam escolher entre diversas normas e técnicas de integração de sistemas, muitas delas incompatíveis entre si \cite{martins2006integraccao}. 
+
+Dentre estas tecnologias se destacam Simple Object Access Protocol (SOAP) e Representational State Transfer (REST), que obtiveram ampla aceitação no mercado pois conseguem se aproveitar do protocolo Hypertext Transfer Protocol (HTTP). Com o REST tendo destaque por ser um modelo de arquitetura simples e robusto, que é capaz de atenter requisitos de integração complexos e com pouco acoplamento \cite{Lusa}.   
 
 \section{HTTP}
 
@@ -662,7 +664,7 @@ O HTTP é o protocolo base de comunicação de aplicações Web e vem sendo util
 
 No HTTP a comunicação é realizada através de requisições e respostas entre clientes e servidores. Um cliente, que pode ser um navegador web, requisita um recurso a um servidor enviando uma mensagem contendo um cabeçalho. Esta mensagem deve ser enviada para uma URI e o servidor então responde com um recurso ou com um outro cabeçalho. 
 
-A \autoref{fig_http_header} mostra o cabeçalho de uma requisição http. Nele é possível observar a URI, no caso /api/users/, e o metódo da requisição, que no exemplo é GET. O servidor responde a esta requisição como um outro cabeçalho e tamém um conteúdo, que no caso é uma lista de usuários. O cabeçalho da resposta do servidor pode ser visto na \autoref{fig_http_response}.
+A \autoref{fig_http_header} é uma captura de tela que mostra o cabeçalho de uma requisição http. Nela é possível observar a URI, no caso /api/users/, e o metódo da requisição, que no exemplo é GET. Também é possível observar o campo authorization, que é uma chave de autorização usada na autenticação do usuário que realizou a requisição. O servidor responde a esta requisição como um outro cabeçalho e também um conteúdo, que no caso é uma lista de usuários. O cabeçalho da resposta do servidor pode ser visto na \autoref{fig_http_response}.
 
 \begin{figure}[htb]
 	\caption{\label{fig_http_header} Cabeçalho de uma requisição HTTP}
