--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -664,7 +664,7 @@ O HTTP é o protocolo base de comunicação de aplicações Web e vem sendo util
 
 No HTTP a comunicação é realizada através de requisições e respostas entre clientes e servidores. Um cliente, que pode ser um navegador web, requisita um recurso a um servidor enviando uma mensagem contendo um cabeçalho. Esta mensagem deve ser enviada para uma URI e o servidor então responde com um recurso ou com um outro cabeçalho. 
 
-A \autoref{fig_http_header} é uma captura de tela que mostra o cabeçalho de uma requisição http. Nela é possível observar a URI, no caso /api/users/, e o metódo da requisição, que no exemplo é GET. Também é possível observar o campo authorization, que é uma chave de autorização usada na autenticação do usuário que realizou a requisição. O servidor responde a esta requisição como um outro cabeçalho e também um conteúdo, que no caso é uma lista de usuários. O cabeçalho da resposta do servidor pode ser visto na \autoref{fig_http_response}.
+A \autoref{fig_http_header} é uma captura de tela que mostra o cabeçalho de uma requisição http. Nela é possível observar a URI, no caso /api/users/, e o metódo da requisição, que no exemplo é GET. Também é possível observar o campo authorization, que é uma chave de autorização usada na autenticação do usuário que realizou a requisição. O servidor responde a esta requisição como um outro cabeçalho e também um conteúdo, que no caso é uma lista de usuários. 
 
 \begin{figure}[htb]
 	\caption{\label{fig_http_header} Cabeçalho de uma requisição HTTP}
@@ -682,7 +682,7 @@ A \autoref{fig_http_header} é uma captura de tela que mostra o cabeçalho de um
 	\legend{Fonte: Elaborado pelo autor}
 \end{figure}
 
-Os cabeçalhos de resposta possuem códigos que servem para identificar se uma requisição foi concluida com sucesso. Por exemplo, um código de resposta 200 indica que uma requisição foi concluida com sucesso, como foi apresentado na \autoref{fig_http_response}. Já um código 401 indicaria que URI acessada exige autenticação do usuário.
+Um cabeçalho de resposta HTTP pode ser visto na \autoref{fig_http_response}. Este cabeçalho possui um código que serve para identificar se a requisição foi concluida com sucesso. No cabeçalho deste exemplo, o código de resposta 200 indica que a requisição foi concluida com sucesso. Já um código 401 indicaria que URI acessada exige autenticação do usuário. O campo \textit{date} informa a data e hora em que a mensagem foi enviada. Já o campo \textit{server} contém o nome do servidor que respondeu a requisição. O cabeçalho informa em \textit{Content-type} o tipo de conteúdo da mensamge e em \textit{Allow} os métodos HTTP que são aceitos.
 
 O HTTP é um protocolo stateless, ou seja, sem estado. Isto significa que ele não guarda informações entre requisiçoes diferentes. Caso seja necessário armazenar dados é preciso utilizar alguma outra tecnologia em conjunto com o HTTP, como cookies ou variáveis de sessão.
 
@@ -741,18 +741,12 @@ O REST também padroniza também o uso dos códigos de respostas do HTTP. Estes 
 
 \section{Arquitetura}
 
-O \textit{plugin} que será desenvolvido é divido em três partes: configurações, sumário de envio e formulário de envio. Nas configurações é onde será definido o comportamento do \textit{plugin}. O sumário de envio será visto pelo estudante e avaliadores na tela inicial da tarefam, e contém um resumo da tarefa. Já o formulário de envio, que é onde o estudante responde a tarefa.
+O \textit{plugin} proposto consite de três partes: configurações, sumário de envio e formulário de envio. Nas configurações é onde será definido o comportamento do \textit{plugin}. O sumário de envio será visto pelo estudante e avaliadores na tela inicial da tarefam, e contém um resumo da tarefa. Já o formulário de envio, que é onde o estudante responde a tarefa.
 
 %O plugin desenvolvido neste trabalho permite que o estudante crie um mapa conceitual, modifique sua aparência e envie para avaliação. O estudante poderá também editar um mapa que já foi enviado, além de ter a possibilidade de salva-lo na plataforma CMPaaS. A \autoref{fig_casosuso} apresenta os casos de uso do plugin.
 %
-Este \textit{plugin} vai oferecer as seguintes funcionalidades:
 
-\begin{itemize}
-	\item criação de um novo mapa conceitual utilizando um editor de mapas. Esta funcionalidade é representada pelo caso de uso Criar Mapa.
-	\item persistencia do mapa criado no repositório do CMPaaS. Esta funcionalidade é representada pelo caso de uso Salvar Mapa.
-	\item edição de um mapa previamente salvo no repositório do CMPaaS. Esta funcionalidade é representada pelo caso de uso Editar Mapa.
-	\item visualização de um mapa previamente salvo no repositório do CMPaaS. Esta funcionalidade é representada pelo caso de uso Visualizar Mapa.      
-\end{itemize} 
+Para o desenvolvimento do \textit{plugin} foi elaborado um diagrama de casos de uso, que pode ser visto na \autoref{fig_casosuso}. 
 
 \begin{figure}[!h]
 	\caption{\label{fig_casosuso} Casos de Uso}
@@ -761,6 +755,15 @@ Este \textit{plugin} vai oferecer as seguintes funcionalidades:
 	\end{center}
 	\legend{Fonte: Elaborado pelo autor}
 \end{figure} 
+
+O \textit{plugin} oferece as seguintes funcionalidades:
+
+\begin{enumerate}
+	\item Criar Mapa: permite a criação de um novo mapa conceitual. O novo mapa é também criado nos repositórios do CMPaaS
+	\item Salvar Mapa: persiste as alterações do  mapa  criado  nos  repositórios  do  CMPaaS.
+	\item  edição de um mapa previamente salvo no repositório do CMPaaS. Esta funcionalidade é representada pelo caso de uso Editar Mapa.
+	\item visualização de um mapa previamente salvo no repositório do CMPaaS. Esta funcionalidade é representada pelo caso de uso Visualizar Mapa.
+\end{enumerate}  
 
 Os atores que irão utilizar o \textit{plugin} são o Estudante, que irá criar e editar mapas conceituais que serão submetidos a avaliação, e um Avaliador, que irá visualizar os mapas criados pelos estudantes e avaliá-lo. Os atores e casos de uso são representados na \autoref{fig_casosuso}.
 
@@ -991,7 +994,7 @@ O \textit{plugin} também possui a funcionalidade de exclusão de um mapa e as s
 
 \chapter{Instalação e Testes}
 
-\section{Como instalar}
+\section{Instalação}
 A pasta contendo os arquivos do \textit{plugin} deve ser copiada para o diretório do Moodle mod/assign/submission/. Após copiar os arquivos para este local é necessário acessar o Moodle com um usuário com perfil de administrador. Assim que efetuar login irá aparecer uma mensagem de instalação de \textit{plugin}, conforme a \autoref{fig_installplugin}.
 \begin{figure}[htb]
 	\caption{\label{fig_installplugin} Configurando a tarefa para utilizar o \textit{plugin}}
