--- a/abntex2-modelo-references.bib
+++ b/abntex2-modelo-references.bib
@@ -7,6 +7,15 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article{dal2009web,
+	title={Web services WS-* versus Web Services REST},
+	author={Dal Moro, Tharcis and Dorneles, Carina and Rebonatto, Marcelo Trindade},
+	journal={Revista de Inicia{\c{c}}{\~a}o Cient{\'\i}fica},
+	volume={11},
+	number={1},
+	year={2009}
+}
+
 @article{Lusa,
 	abstract = {Neste artigo s{\~{a}}o abordados os conceitos-chave do modelo arquitetural REST, suas origens e caracter{\'{i}}sticas. Ser{\'{a}} visto tamb{\'{e}}m as principais vantagens e desvantagens da sua aplica{\c{c}}{\~{a}}o e sua estreita rela{\c{c}}{\~{a}}o com o funcionamento da pr{\'{o}}pria WEB.},
 	author = {Lusa, Diego Antonio and Kraemer, Robson Paulo},
