--- a/abntex2-modelo-trabalho-academico.tex
+++ b/abntex2-modelo-trabalho-academico.tex
@@ -817,7 +817,7 @@ Quando o estudante executa a funcionalidade de criação de mapas um um editor d
 \begin{figure}[htb]
 	\caption{\label{fig_seqcriar} Criar mapa}
 	\begin{center}
-		\includegraphics[scale=0.4]{seqcriar.png}
+		\includegraphics[scale=0.5]{seqcriar.png}
 	\end{center}
 	\legend{Fonte: Elaborado pelo autor}
 \end{figure}
@@ -827,7 +827,7 @@ A funcionalidade de edição de mapas funciona de forma semelhante a de criaçã
 \begin{figure}[htb]
 	\caption{\label{fig_seqeditar} Editar mapa}
 	\begin{center}
-		\includegraphics[scale=0.4]{seqeditar.png}
+		\includegraphics[scale=0.5]{seqeditar.png}
 	\end{center}
 	\legend{Fonte: Elaborado pelo autor}
 \end{figure}
@@ -835,20 +835,22 @@ A funcionalidade de edição de mapas funciona de forma semelhante a de criaçã
 \subsection{Apagar mapas e suas versões}
 
 Existem duas funcionalidades quer permitem ao estudante apagar de forma definitiva um mapa existente em seu repositório. A primeira, que esta demonstrada na \autoref{fig_apagarver}, consiste em apagar uma única versão de um mapa. Neste caso apenas uma versão é apagada, sendo mantido no repositório o mapa e suas outras versões.
-A outra forma é a apagar todas as versões de um mapa, eliminando todo o histórico do mapa do repositório. A sequencia de eventos desta funcionalidade é mostrada na \autoref{fig_apagarmap}.  
+ 
 
 \begin{figure}[htb]
 	\caption{\label{fig_apagarver} Apagar versão}
 	\begin{center}
-		\includegraphics[scale=0.4]{apagarver.png}
+		\includegraphics[scale=0.5]{apagarver.png}
 	\end{center}
 	\legend{Fonte: Elaborado pelo autor}
 \end{figure}
 
+A outra forma é apagar todas as versões de um mapa, eliminando todo o histórico do mapa do repositório. A sequencia de eventos desta funcionalidade é mostrada na \autoref{fig_apagarmap}. 
+
 \begin{figure}[htb]
 	\caption{\label{fig_apagarmap} Apagar mapa}
 	\begin{center}
-		\includegraphics[scale=0.4]{apagarmap.png}
+		\includegraphics[scale=0.5]{apagarmap.png}
 	\end{center}
 	\legend{Fonte: Elaborado pelo autor}
 \end{figure}
